--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,14 @@
         <artifactId>kafka-clients</artifactId>
         <version>3.0.2</version>
     </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.9.1</version>
+        </dependency>
+
     </dependencies>
 
 
